--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -19,6 +19,11 @@
   position: relative;
 }
 
+.ug-layout__xy-item-container {
+  width: 100%;
+  height: 100%;
+}
+
 .ug-layout__drag-handle {
   position: absolute;
   height: 100%;
