--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -1,4 +1,5 @@
 .ug-layout__root,
+.ug-layout__stack,
 .ug-layout__layout {
   height: 100%;
   width: 100%;
@@ -50,4 +51,31 @@
 .ug-layout__splitter-y .ug-layout__drag-handle {
   height: 25px;
   top: -12px;
+}
+
+.ug-layout__stack {
+  display: flex;
+  flex-direction: column;  
+}
+
+.ug-layout__stack.ug-layout__stack-y {
+  flex-direction: row;  
+}
+
+.ug-layout__stack.ug-layout__stack-reverse {
+  flex-flow: column-reverse;
+}
+
+.ug-layout__stack.ug-layout__stack-reverse.ug-layout__stack-y {
+  flex-flow: row-reverse;
+}
+
+.ug-layout__stack-header {
+  display: flex;
+  flex-direction: row;
+}
+
+.ug-layout__stack-tab {
+  height: 100%;
+  min-width: 50px;
 }
