--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -5,6 +5,10 @@
   width: 100%;
 }
 
+.ug-layout__root {
+  background-color: #000000;
+}
+
 .ug-layout__row {
   display: flex;
   flex-direction: row;
@@ -23,6 +27,7 @@
 .ug-layout__xy-item-container {
   width: 100%;
   height: 100%;
+  background-color: rgb(25, 25, 25);
 }
 
 .ug-layout__drag-handle {
@@ -59,7 +64,7 @@
 }
 
 .ug-layout__stack.ug-layout__stack-y {
-  flex-direction: row;  
+  flex-direction: row;
 }
 
 .ug-layout__stack.ug-layout__stack-reverse {
@@ -73,18 +78,41 @@
 .ug-layout__stack-header {
   display: flex;
   flex-direction: row;
+  background-color: rgb(37, 37, 38)
+}
+
+.ug-layout__stack-y .ug-layout__stack-header {
+  flex-direction: column;  
 }
 
 .ug-layout__stack-tab {
+  font-family: sans-serif;
+  font-size: 13px;
   display: flex;
   flex-direction: row;
   position: relative;
-  height: 100%;
-  min-width: 50px;
-  padding: 0 5px;
   align-items: center;
   cursor: pointer;
+  background-color: rgb(45, 45, 45);
+  color: rgb(142, 142, 142);
+  border-right: 1px solid rgb(37, 37, 38);
 } 
+
+.ug-layout__stack-tab-x {
+  padding: 0 5px;
+}
+
+.ug-layout__stack-tab-x.ug-layout__stack-tab-distributed {
+  width: 100%;
+}
+
+.ug-layout__stack-tab-y {
+  padding: 5px 0;
+}
+
+.ug-layout__stack-tab-y.ug-layout__stack-tab-distributed {
+  height: 100%;
+}
 
 .ug-layout__stack-tab:hover .ug-layout__stack-tab-close {
 }
@@ -97,6 +125,6 @@
 }
 
 .ug-layout__stack-tab-active {
-  background-color: black;
+  background-color: rgb(27, 43, 52);
   color: white;
 }
