--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -92,6 +92,10 @@
   flex-direction: column;  
 }
 
+.ug-layout__stack-tab.ug-layout__tab-dragging {
+  z-index: 1050;
+}
+
 .ug-layout__stack-tab {
   font-family: sans-serif;
   font-size: 13px;
@@ -103,6 +107,7 @@
   background-color: rgb(45, 45, 45);
   color: rgb(142, 142, 142);
   border-right: 1px solid rgb(37, 37, 38);
+  z-index: 150;
 } 
 
 .ug-layout__stack-tab-x {
