--- a/angular/test/live/index.css
+++ b/angular/test/live/index.css
@@ -3,3 +3,13 @@ body {
   width: 100%;
   margin: 0;
 }
+
+app, .app {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+.ug-layout__root {
+  background-color: white;
+}
