--- a/layout/src/styles/core.css
+++ b/layout/src/styles/core.css
@@ -175,10 +175,9 @@
   top: 0;
   left: 0;
   z-index: 1000;
+  box-shadow: inset 0 0 30px #000000;
   background-color: rgba(0, 0, 0, 0.75);
-  height: 1px;
-  width: 1px;
   transform-origin: top left;
-  transform: scale(1, 1) translate(0, 0);
-  transition: transform 0.15s ease-in;
+  transform: translate(0, 0);
+  transition: all 0.15s ease-in;
 }
