--- a/layout/src/styles/core.css
+++ b/layout/src/styles/core.css
@@ -181,3 +181,8 @@
   transform: translate(0, 0);
   transition: all 0.15s ease-in;
 }
+
+.ug-layout__view-container-mount {
+  width: 100%;
+  height: 100%;
+}
