--- a/layout/src/styles/core.css
+++ b/layout/src/styles/core.css
@@ -135,14 +135,20 @@
   height: 100%;
 }
 
-.ug-layout__stack-tab:hover .ug-layout__stack-tab-close {
-}
-
 .ug-layout__stack-tab-close {
   flex-grow: 0;
-  padding: 0 0 0 5px;
   text-align: center;
   cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 0.15s ease-in;
+}
+
+.ug-layout__stack-tab-controls {
+  padding-left: 5px;
+}
+
+.ug-layout__stack-tab-close:hover {
+  opacity: 1;
 }
 
 .ug-layout__stack-tab-active {
@@ -190,4 +196,14 @@
 
 .ug-layout__close-stack-control {
   cursor: pointer;
+  color: #FFFFFF;
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+  opacity: 0.5;
+  transition: opacity 0.15s ease-in;
+}
+
+.ug-layout__close-stack-control:hover {
+  opacity: 1;
 }
