--- a/layout/src/styles/core.css
+++ b/layout/src/styles/core.css
@@ -115,6 +115,12 @@
   z-index: 150;
 } 
 
+.ug-layout__stack-tab > div:first-child {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .ug-layout__stack-tab.ug-layout__tab-drag-enabled:not(.ug-layout__tab-dragging) {
   transition: transform 0.25s ease-in;
 }
@@ -176,6 +182,9 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .ug-layout__view-container {
