add docs for views

--- a/layout/generated-docs/manual/index.html
+++ b/layout/generated-docs/manual/index.html
@@ -1690,7 +1690,8 @@ any special logic or configuration.</p>
       <div>
         
         
-        
+        <div data-ice="description"><p>A renderable that renders a component.</p>
+</div>
       </div>
     </td>
     <td>
@@ -1745,7 +1746,8 @@ any special logic or configuration.</p>
       <div>
         
         
-        
+        <div data-ice="description"><p>Responsible for creating view containers from view configurations.</p>
+</div>
       </div>
     </td>
     <td>
