--- a/layout/generated-docs/file/docs/view/ViewFactory.js.html
+++ b/layout/generated-docs/file/docs/view/ViewFactory.js.html
@@ -175,19 +175,26 @@ import { get } from &apos;../utils&apos;;
 
 export interface ViewFactoryArgs {
   config: ViewConfig;
-  injector: Injector;
-  container: View;
+  injector?: Injector;
 }
 
+/**
+ * Responsible for creating view containers from view configurations.
+ * @export
+ * @class ViewFactory
+ */
 export class ViewFactory {
+  /**
+   * Creates a view container from the given configuration.
+   * @template T The component type.
+   * @param {ViewFactoryArgs} args 
+   * @returns {ViewContainer&lt;T&gt;} 
+   */
   create&lt;T&gt;(args: ViewFactoryArgs): ViewContainer&lt;T&gt; {
-    const { config, injector, container } = args;
+    const { config, injector } = args;
     const isLazy = this.resolveConfigProperty(config, &apos;lazy&apos;);
     
-    const providers: ProviderArg[] = [
-      { provide: ContainerRef, useValue: container },
-      ViewContainer
-    ];
+    const providers: ProviderArg[] = [ ViewContainer ];
 
     if (config.useFactory) {
       providers.push({
@@ -221,6 +228,12 @@ export class ViewFactory {
     return viewContainer;
   }  
 
+  /**
+   * Gets the token from a view config. If using `useClass` the class will be used as the token.
+   * Any other type will require token to be provided.
+   * @param {ViewConfig} config 
+   * @returns {*} 
+   */
   getTokenFrom(config: ViewConfig): any {
     if (config.token) {
       return config.token;
@@ -237,6 +250,13 @@ export class ViewFactory {
     throw new Error(&apos;Can not resolve token from config.&apos;);
   }
 
+  /**
+   * Resolves a config property by looking at the view config then the components metadata config.
+   * @template T The type of the value expected.
+   * @param {ViewConfig} config 
+   * @param {string} path 
+   * @returns {(T|null)} 
+   */
   resolveConfigProperty&lt;T&gt;(config: ViewConfig, path: string): T|null {
     const token = this.getTokenFrom(config);
     let result = get(config, path);
