--- a/file/docs/view/decorators.js.html
+++ b/file/docs/view/decorators.js.html
@@ -177,7 +177,7 @@ export function ViewComponent(config: ViewComponentConfigArgs = {}): ClassDecora
     config = Object.assign({
       cacheable: false,
       lazy: false,
-      resolution: ResolverStrategy.SINGLETON,
+      resolution: ResolverStrategy.TRANSIENT,
       name: null
     }, config);
     
