style(theme): don't highlight splitter if it's disabled

--- a/layout/src/styles/theme-default.css
+++ b/layout/src/styles/theme-default.css
@@ -8,7 +8,7 @@
   transition: opacity 200ms ease;
 }
 
-.ug-layout__splitter:hover, .ug-layout__splitter-dragging {
+.ug-layout__splitter:not(.ug-layout__splitter-disabled):hover, .ug-layout__splitter-dragging {
   opacity: 1;
 } 
 
