fix(styles): icon class only apply to styles and not font

--- a/layout/src/styles/theme-default.css
+++ b/layout/src/styles/theme-default.css
@@ -40,6 +40,6 @@
   color: #FFFFFF;
 }
 
-[class^="ug-icon-"], [class*=" ug-icon-"], .ug-icon-style {
+[class^="ug-icon-"], [class*=" ug-icon-"], .ug-layout__icon {
   color: #FFFFFF;
 }
