--- a/layout/src/styles/theme-gl.css
+++ b/layout/src/styles/theme-gl.css
@@ -35,7 +35,7 @@
   color: #FFFFFF;
 }
 
-[class^="ug-icon-"], [class*=" ug-icon-"], .ug-icon-style {
+[class^="ug-icon-"], [class*=" ug-icon-"], .ug-layout__icon {
   color: #FFFFFF;
 }
 
