--- a/layout/src/styles/core.css
+++ b/layout/src/styles/core.css
@@ -200,13 +200,13 @@
   align-items: center;
 }
 
-[class^="ug-icon-"], [class*=" ug-icon-"], .ug-icon-style {
+[class^="ug-icon-"], [class*=" ug-icon-"], .ug-layout__icon {
   cursor: pointer;
   opacity: 0.5;  
   transition: opacity 0.15s ease-in;
 }
 
-[class^="ug-icon-"]:hover, [class*=" ug-icon-"]:hover, .ug-icon-style:hover {
+[class^="ug-icon-"]:hover, [class*=" ug-icon-"]:hover, .ug-layout__icon:hover {
   opacity: 1;  
 }
 
