feat(Stack): improved styling for detaching

--- a/packages/ug-layout/test/live/index.css
+++ b/packages/ug-layout/test/live/index.css
@@ -1,3 +1,7 @@
+@import url('../../src/styles/icons.css');
+@import url('../../src/styles/core.css');
+@import url('../../src/styles/theme-gl.css');
+
 body {
   height: 100%;
   width: 100%;
