--- a/packages/ug-layout/src/styles/theme-gl.css
+++ b/packages/ug-layout/src/styles/theme-gl.css
@@ -10,17 +10,19 @@
 
 .ug-layout__splitter:not(.ug-layout__splitter-disabled):hover, .ug-layout__splitter-dragging {
   opacity: 1;
-} 
+}
 
 .ug-layout__stack-tab {
-  background-color: #111111; 
+  background-color: #111111;
   color: #999999;
   font-size: 12px;
   margin-right: 2px;
   box-shadow: 2px -2px 2px rgba(0, 0, 0, 0.3);
-} 
+}
 
-.ug-layout__stack-tab-active, .ug-layout__stack-tab:hover {
+.ug-layout__stack-tab-active,
+.ug-layout__stack-tab:hover,
+.ug-layout__default-detach-container {
   background-color: #222222;
   color: #DDDDDD;
 }
