--- a/packages/ug-layout-angular/test/live/index.css
+++ b/packages/ug-layout-angular/test/live/index.css
@@ -11,6 +11,12 @@ app,
   width: 100%;
 }
 
+ug-layout {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
 .ug-layout__root {
   background-color: white;
 }
